# machine-learning-zoomcamp

./: README.md
01-intro/: homework.ipynb
02-regression/: 02-price-prediction-live.ipynb  homework.ipynb
03-classification/: 03-churn-prediction-live.ipynb  homework.ipynb
04-evaluation/: 04-evaluation-live.ipynb  homework.ipynb
05-deployment/: 05-predict-test.ipynb  ping.py  predict-test.py  predict.py  train.py
05-deployment/homework/: Dockerfile  marketing.py  predict_v1.py  predict_v2.py  predict_v3.py  pyproject.toml  scoring.py
05-deployment/new/: marketing.py  predict.py  pyproject.toml  train.py  workshop-uv-fastapi.ipynb
05-deployment/old/: 05-train-churn-model.ipynb  Dockerfile  Pipfile  predict.py
06-trees/: 06-trees-live.ipynb  homework.ipynb
07-midterm-project/: Dockerfile  README.md  digital-lifestyle.ipynb  predict.py  pyproject.toml  risk.py  risk_cloud.py  train.py
08-deep-learning/: 08-deep-learning-live.ipynb  08_deep_learning_live_pytorch.ipynb  homework.ipynb
09-serverless/: Dockerfile  homework.ipynb  lambda_function.py  test.py
09-serverless/mlzoomcamp-serverless/lambda-onnx/: Dockerfile  lambda_function.py
09-serverless/mlzoomcamp-serverless/lambda-sklearn/: Dockerfile  (+2 more)
10-kubernetes/: Dockerfile  app.py  pyproject.toml
10-kubernetes/homework/: .gitignore
10-kubernetes/k8s/: service.yaml
capstone-project/: Dockerfile  README.md  app.py  capstone_project.ipynb  load_test.py  pyproject.toml  test.py
capstone-project/k8s/: deployment.yaml  hpa.yaml  service.yaml
capstone-project/scripts/: convert.py  train.py
